src/test/compile-fail/E0090.rs
fn foo<'a: 'b, 'b: 'a>() {}
fn main() {
    foo::<'static>();//~ ERROR E0090
                     //~^ too few lifetime parameters
}
